Bug #13040: Merge error causing partition error